--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "jest",
     "jest:watch": "jest --watchAll",
-    "start": "node index.js"
+    "index": "node index.js",
+    "complete": "node complete.js"
   },
   "dependencies": {
     "jest": "^26.6.3"
